--- a/keyboards.html
+++ b/keyboards.html
@@ -31,7 +31,7 @@
                             <li><a href="headphones.html">Headphones</a></li>
 
                             <li>
-                                <div class="main-nav-small"><a href="news.html">About Me</a></div>
+                                <div class="main-nav-small"><a href="about-me.html">About Me</a></div>
                             </li>
                             <li>
                                 <div class="main-nav-small"><a href="contact.html">Contact</a></div>
@@ -54,7 +54,7 @@
 
                     <div class="main-nav">
                         <ul>
-                            <li><a href="news.html">About Me</a></li>
+                            <li><a href="about-me.html">About Me</a></li>
                             <li><a href="contact.html">Contact</a></li>
                         </ul>
                     </div>
@@ -79,9 +79,9 @@
                         <div class="card">
                             <img class="card-img-top" src="images/M50x-1.jpg" alt="headphones">
                             <div class="card-body">
-                                <h4 class="card-title">Audio Technica M50x</h4>
+                                <h4 class="card-title">Fnatic Streak Mini</h4>
                                 <p class="card-text">The M50x by audio-technica was released in January of 2014. They are priced at $150, which it’s safe to say it’s an absolute steal. These headphones are by far the best I’ve...</p>
-                                <a href="#" class="btn btn-primary">See Review</a>
+                                <a href="fnatic-streak-review.html" class="btn btn-primary">See Review</a>
                             </div>
                         </div>
                     </section>
@@ -89,9 +89,9 @@
                         <div class="card">
                             <img class="card-img-top" src="images/Sennheiser-PC-37x.jpg" alt="headphones">
                             <div class="card-body">
-                                <h4 class="card-title">Sennheiser PC-37x</h4>
+                                <h4 class="card-title">Razer Huntsman TE</h4>
                                 <p class="card-text">The Sennheiser PC-37x's are one of the cheaper options for gaming from Sennheiser. But it's safe to say that these pair of headphones, have some serious bang for the buck!</p>
-                                <a href="#" class="btn btn-primary">See Review</a>
+                                <a href="razer-huntsman-te-review.html" class="btn btn-primary">See Review</a>
                             </div>
                         </div>
                     </section>
@@ -103,23 +103,13 @@
                         <div class="card">
                             <img class="card-img-top" src="images/M50x-1.jpg" alt="headphones">
                             <div class="card-body">
-                                <h4 class="card-title">HyperX Cloud Alpha</h4>
+                                <h4 class="card-title">Corsair K70 Mk.2</h4>
                                 <p class="card-text">The M50x by audio-technica was released in January of 2014. They are priced at $150, which it’s safe to say it’s an absolute steal. These headphones are by far the best I’ve...</p>
-                                <a href="#" class="btn btn-primary">See Review</a>
+                                <a href="corsair-k70-review.html" class="btn btn-primary">See Review</a>
                             </div>
                         </div>
                     </section>
-                    <section class="col-md-6">
-                        <div class="card">
-                            <img class="card-img-top" src="images/Sennheiser-PC-37x.jpg" alt="headphones">
-                            <div class="card-body">
-                                <h4 class="card-title">Astro A40</h4>
-                                <p class="card-text">The Sennheiser PC-37x's are one of the cheaper options for gaming from Sennheiser. But it's safe to say that these pair of headphones, have some serious bang for the buck!</p>
-                                <a href="#" class="btn btn-primary">See Review</a>
-                            </div>
-                        </div>
-                    </section>
-                </div>
+                    </div>
             </div>
 
         </div>
