--- a/logitech-g-pro-review.html
+++ b/logitech-g-pro-review.html
@@ -26,9 +26,9 @@
                             <div id="bar3" class="bar"></div>
                         </div>
                         <ul class="nav" id="nav">
-                            <li><a href="mice.html">Mice</a></li>
+                            <li><a href="mice.html"><b>Mice</b></a></li>
                             <li><a href="keyboards.html">Keyboards</a></li>
-                            <li><a href="headphones.html"><b>Headphones</b></a></li>
+                            <li><a href="headphones.html">Headphones</a></li>
                             <li>
                                 <div class="main-nav-small"><a href="about-me.html">About Me</a></div>
                             </li>
@@ -75,18 +75,18 @@
                     </div>
                     <section class="col-md-9">
                         <div class="page1-header">
-                            <h1>Audio-Technica M50x</h1>
+                            <h1>Logitech G Pro Wireless</h1>
                         </div>
                     </section>
                 </div>
                 <div class="row">
                     <section class="col-md-12">
-                        <img class="image-header-left img-fluid" src="images/M50x-1.jpg" width="1500" height="792" alt="computer-monitors">
+                        <img class="image-header-left img-fluid" src="images/mouse-on-pad.jpg" width="1500" height="792" alt="g-pro-mouse-on-pad">
                     </section>
                     <div class="green-text-bckg">
                         <section class="col-md-6">
                             <h2>Quick take:</h2>
-                            <p>Great headphones! If you have the money and a external microphone. Would highly recommend the Audio Technica M50x's. </p>
+                            <p>On the market right now, there is no better mouse out there for gaming. This is the future of mice. </p>
                         </section>
                     </div>
                 </div>
@@ -95,39 +95,43 @@
                 <div class="row">
                     <section class="col-md-12">
                         <div class="review-text">
-                            <h3><b>The M50x by audio-technica</b></h3>
-                            <p>These headphones are by far the best I’ve used in my life for gaming. I’ve used everything from the high-priced Astro a50s, to the most popular HyperX cloud series. None of those are even in the ballpark of the M50x. It’s safe to say that if I had to pick one headset to have for the rest of my life, I wouldn’t regret picking the M50x’s.</p>
+                            <h3><b>The G Pro by Logitech</b></h3>
+                            <p>The Logitech G Pro Wireless was released in July of 2018. At first many competitive players didn’t think much of it and many casual players never even had it has an option. Taking in the account it’s launch price was $150. But as time went by more and more people where able to use the Logitech G Pro Wireless. It quickly become the forever mouse of many professional and casual players alike. I was one of them, who was skeptical of the price point. But now that I have spent it, I don’t see myself ever using another mouse again for the foreseeable future. </p>
                         </div>
                     </section>
                     <section class="col-md-12">
                         <div class="review-text">
                             <h3><b>Cons</b></h3>
-                            <p style="clear: both">The M50x’s does have some cons to it, but most of them are personal preference. To start, it’s a closed back design. Closed back, if you don’t know, just means it’s ear cuffs are designed to cancel out noise. Which is not a bad thing by no means. The problem I have with closed back headphones, is that they in general don’t let your ears breath. So, this means over long sessions of wearing them, your ears may begin to sweat and get hot. I’ve only had this issue sometimes when going for long sessions. But to relieve it, I just slide the ear part off my ear about halfway, so I can still hear the audio and let my ear breath for a bit.</p>
+                            <p style="clear: both">This mouse is one of the only mice that I can’t think of many cons. As I sit here looking at the mouse, holding it in my hands. I honestly can not think of a con. It’s not missing any features. It’s using the newest and best technology Logitech has to offer. </p>
                         </div>
                     </section>
                     <section class="col-md-5">
                         <div class="review-text">
-                            <p>Another con one may have is that, if you intend on using the M50x’s to play games. It doesn’t have a built-in microphone. So, you’ll have to go out and buy one. This wasn’t an issue for me since most gaming headsets have really bad quality microphones. For my microphone I went with a ModMic wireless, which can be attached to any pair of headphones on the market via a 3m adhesive.</p>
-                            <div class="review-text-seperate">
                             <h3><b>Pros</b></h3>
-                            <p>The pros for the M50x goes on for days. First off, I’m going to start with what it comes with. It comes with three cables. One is a small short 3.5mm jack for your phones and small devices. The second is just like the first but longer. Then finally, is a coiled cable that is very long. It also has an amp jack on it that can be attached or removed depending if you have a amp or not. One of the unique things about these headphones is that they actually fold up and come with a caring case, this makes transport very easy. </p>
-                            <p>Another pro is that, they use quality leather and cushion in the earpieces and headband. My head never really gets tired of wearing these things, besides when my ears get warm. The biggest pro that these have going for it is the sound quality.
-                            </p>
-                                </div>
+                            <p>With this mouse being in my mind the perfect mouse. It has a lot going for it. Let’s start with the Body. The body is an ambidextrous design and has one of the safest shapes on the market. The Logitech G Pro was designed to work with all hand sizes and grips, and it does that very well. </p>
+                            <div class="review-text-seperate">
+
+                                <p>Logitech did something never heard of when making this mouse. They made a wireless mouse under 100 grams. The G Pro comes in at 80 grams. Which is absolutely insane.</p>
+                                <p>It’s lighter than most wired mice that don’t have a battery in them. Weighing 80 grams doesn’t hold back the battery life either. Its advertised as 48 hours with the lights on and 60 hours without. I can contest that is very accurate.
+                                </p>
+                                <p>I don’t remember the last time I’ve charged my mouse. It’s been longer than two weeks and it is just below 33% battery life. </p>
+
+                                <p>Moving on from the shape and weight. The materials used on this mouse are all great. All the buttons feel solid and are clicky. The mouse wheel is one of the best wheels out there. It doesn’t have infinite scroll, but I don’t feel like that would fit this mouse very well. It does offer mouse buttons on bot sides of the mouse. All of which are removeable and customizable. </p>
+                            </div>
                         </div>
                     </section>
                     <section class="col-md-6">
-                        <img class="review-image img-fluid" src="images/M50x-2.jpg" alt="M50x-headphones-box">
+                        <img class="review-image img-fluid" src="images/G-Pro-1.jpg" alt="g-pro-wireless-mouse">
                     </section>
                     <section class="col-md-12">
-                    <p> I have never had a pair of headphones sound so good. Lows are really good with these. So, footsteps in games that those are important are very easily heard. These have bass, but not too much where it becomes overpowering. I’ve only had mine for about four months now, and from other reviews, I’ve only heard they sound even better the longer you use them! </p>
+                        <p> It doesn’t have infinite scroll, but I don’t feel like that would fit this mouse very well. It does offer mouse buttons on bot sides of the mouse. All of which are removeable and customizable. </p>
                     </section>
                     <section class="col-md-12">
                         <div class="review-text">
                             <h3><b>Conclusion</b></h3>
-                            <p>Overall if you are looking for a pair of headphones, or a headset. I would go with the Audio Technica M50x’s and a standalone microphone 100 times over again. At $150 its really hard to beat. When I was buying mine it was between the M50x and the Sennheiser HD 6XX. The 6XX come in at $220. The only main differences between the two is that the 6XX are more open back design, which I prefer, and the 6XX draw more power.</p>
+
                             <div class="review-text-bottem">
-                            <p>I really liked the open back design but didn’t like that it draws more power than the M50x. Another thing that gave the M50x an upper hand was that, they are some much more versatile. The 6XX would just be use able comfortably at home at your main rig. The M50x’s on the other hand are useable anywhere you are. Whether at home, school, or on a bus ride in the city. The M50x will be there. </p>
+                                <p>To conclude this mouse, if you want a mouse that will last you a very long time and you will never complain about. This mouse is worth every penny of the $150 price tag. Logitech does come out with limited editions of this mouse every so often. I wouldn’t hesitate to get one if I could get inline before they sell out. This mouse is just that good. It’s the best on the market right now. Wireless is the future and right now no one does it better than Logitech!</p>
                             </div>
                         </div>
                     </section>
