--- a/mice.html
+++ b/mice.html
@@ -30,7 +30,7 @@
                             <li><a href="keyboards.html">Keyboards</a></li>
                             <li><a href="headphones.html">Headphones</a></li>
                             <li>
-                                <div class="main-nav-small"><a href="news.html">About Me</a></div>
+                                <div class="main-nav-small"><a href="about-me.html">About Me</a></div>
                             </li>
                             <li>
                                 <div class="main-nav-small"><a href="contact.html">Contact</a></div>
@@ -53,7 +53,7 @@
 
                     <div class="main-nav">
                         <ul>
-                            <li><a href="news.html">About Me</a></li>
+                            <li><a href="about-me.html">About Me</a></li>
                             <li><a href="contact.html">Contact</a></li>
                         </ul>
                     </div>
@@ -76,21 +76,21 @@
                     </section>
                     <section class="col-md-6">
                         <div class="card">
-                            <img class="card-img-top" src="images/M50x-1.jpg" alt="headphones">
+                            <img class="card-img-top" src="images/mouse-on-pad.jpg" alt="logitech-mouse">
                             <div class="card-body">
-                                <h4 class="card-title">Audio Technica M50x</h4>
-                                <p class="card-text">The M50x by audio-technica was released in January of 2014. They are priced at $150, which it’s safe to say it’s an absolute steal. These headphones are by far the best I’ve...</p>
-                                <a href="#" class="btn btn-primary">See Review</a>
+                                <h4 class="card-title">Logitech G Pro Wireless</h4>
+                                <p class="card-text">The Logitech G Pro Wireless was released in July of 2018. At first many competitive players didn’t think much of it and many casual players never even had it has an option. Taking in the account it’s launch price was $150...</p>
+                                <a href="logitech-g-pro-review.html" class="btn btn-primary">See Review</a>
                             </div>
                         </div>
                     </section>
                     <section class="col-md-6">
                         <div class="card">
-                            <img class="card-img-top" src="images/Sennheiser-PC-37x.jpg" alt="headphones">
+                            <img class="card-img-top" src="images/rival-310-2.jpg" alt="steelseries-mouse">
                             <div class="card-body">
-                                <h4 class="card-title">Sennheiser PC-37x</h4>
-                                <p class="card-text">The Sennheiser PC-37x's are one of the cheaper options for gaming from Sennheiser. But it's safe to say that these pair of headphones, have some serious bang for the buck!</p>
-                                <a href="#" class="btn btn-primary">See Review</a>
+                                <h4 class="card-title">Steelseries Rival 310</h4>
+                                <p class="card-text">The Steelseries Rival 310 is one of the three flagship mice Steelseries has to offer. It has a right-handed ergonomic grip with larger body size than most mice. The Rival 310 has the best sensor Steelseries has every made...</p>
+                                <a href="rival-310-review.html" class="btn btn-primary">See Review</a>
                             </div>
                         </div>
                     </section>
@@ -100,21 +100,21 @@
                 <div class="row">
                     <section class="col-md-6">
                         <div class="card">
-                            <img class="card-img-top" src="images/M50x-1.jpg" alt="headphones">
+                            <img class="card-img-top" src="images/G903.jpg" alt="logitech-g903-mouse">
                             <div class="card-body">
-                                <h4 class="card-title">HyperX Cloud Alpha</h4>
-                                <p class="card-text">The M50x by audio-technica was released in January of 2014. They are priced at $150, which it’s safe to say it’s an absolute steal. These headphones are by far the best I’ve...</p>
-                                <a href="#" class="btn btn-primary">See Review</a>
+                                <h4 class="card-title">Logitech G903</h4>
+                                <p class="card-text">The Logitech G903 is one of Logitech’s flagship mice in their wireless lineup. The G903 is the upgraded version of the G900. Featuring increased battery time and a better sensor... </p>
+                                <a href="logitech-g903-review.html" class="btn btn-primary">See Review</a>
                             </div>
                         </div>
                     </section>
                     <section class="col-md-6">
                         <div class="card">
-                            <img class="card-img-top" src="images/Sennheiser-PC-37x.jpg" alt="headphones">
+                            <img class="card-img-top" src="images/zowie-ec2-a-1.jpg" alt="zowie-mouse">
                             <div class="card-body">
-                                <h4 class="card-title">Astro A40</h4>
-                                <p class="card-text">The Sennheiser PC-37x's are one of the cheaper options for gaming from Sennheiser. But it's safe to say that these pair of headphones, have some serious bang for the buck!</p>
-                                <a href="#" class="btn btn-primary">See Review</a>
+                                <h4 class="card-title">Zowie EC2-A</h4>
+                                <p class="card-text">Zowie has always been and staple in esports ever since they where created. All their products where designed for top competitive play. Their mouse line up is no exceptions...</p>
+                                <a href="zowie-ec2-a-review.html" class="btn btn-primary">See Review</a>
                             </div>
                         </div>
                     </section>
