--- a/headphones.html
+++ b/headphones.html
@@ -30,7 +30,7 @@
                             <li><a href="keyboards.html">Keyboards</a></li>
                             <li><a href="headphones.html"><b>Headphones</b></a></li>
                             <li>
-                                <div class="main-nav-small"><a href="news.html">About Me</a></div>
+                                <div class="main-nav-small"><a href="about-me.html">About Me</a></div>
                             </li>
                             <li>
                                 <div class="main-nav-small"><a href="contact.html">Contact</a></div>
@@ -53,7 +53,7 @@
 
                     <div class="main-nav">
                         <ul>
-                            <li><a href="news.html">About Me</a></li>
+                            <li><a href="about-me.html">About Me</a></li>
                             <li><a href="contact.html">Contact</a></li>
                         </ul>
                     </div>
@@ -90,7 +90,7 @@
                             <div class="card-body">
                                 <h4 class="card-title">Sennheiser PC-37x</h4>
                                 <p class="card-text">The Sennheiser PC-37x's are one of the cheaper options for gaming from Sennheiser. But it's safe to say that these pair of headphones, have some serious bang for the buck!</p>
-                                <a href="#" class="btn btn-primary">See Review</a>
+                                <a href="sennheiser-pc-37x-review.html" class="btn btn-primary">See Review</a>
                             </div>
                         </div>
                     </section>
@@ -102,19 +102,9 @@
                         <div class="card">
                             <img class="card-img-top" src="images/M50x-1.jpg" alt="headphones">
                             <div class="card-body">
-                                <h4 class="card-title">HyperX Cloud Alpha</h4>
-                                <p class="card-text">The M50x by audio-technica was released in January of 2014. They are priced at $150, which it’s safe to say it’s an absolute steal. These headphones are by far the best I’ve...</p>
-                                <a href="#" class="btn btn-primary">See Review</a>
-                            </div>
-                        </div>
-                    </section>
-                    <section class="col-md-6">
-                        <div class="card">
-                            <img class="card-img-top" src="images/Sennheiser-PC-37x.jpg" alt="headphones">
-                            <div class="card-body">
                                 <h4 class="card-title">Astro A40</h4>
-                                <p class="card-text">The Sennheiser PC-37x's are one of the cheaper options for gaming from Sennheiser. But it's safe to say that these pair of headphones, have some serious bang for the buck!</p>
-                                <a href="#" class="btn btn-primary">See Review</a>
+                                <p class="card-text">The M50x by audio-technica was released in January of 2014. They are priced at $150, which it’s safe to say it’s an absolute steal. These headphones are by far the best I’ve...</p>
+                                <a href="astro-a40-review.html" class="btn btn-primary">See Review</a>
                             </div>
                         </div>
                     </section>
