--- a/logitech-g903-review.html
+++ b/logitech-g903-review.html
@@ -26,9 +26,9 @@
                             <div id="bar3" class="bar"></div>
                         </div>
                         <ul class="nav" id="nav">
-                            <li><a href="mice.html">Mice</a></li>
+                            <li><a href="mice.html"><b>Mice</b></a></li>
                             <li><a href="keyboards.html">Keyboards</a></li>
-                            <li><a href="headphones.html"><b>Headphones</b></a></li>
+                            <li><a href="headphones.html">Headphones</a></li>
                             <li>
                                 <div class="main-nav-small"><a href="about-me.html">About Me</a></div>
                             </li>
@@ -75,18 +75,18 @@
                     </div>
                     <section class="col-md-9">
                         <div class="page1-header">
-                            <h1>Audio-Technica M50x</h1>
+                            <h1>Logitech G903</h1>
                         </div>
                     </section>
                 </div>
                 <div class="row">
                     <section class="col-md-12">
-                        <img class="image-header-left img-fluid" src="images/M50x-1.jpg" width="1500" height="792" alt="computer-monitors">
+                        <img class="image-header-left img-fluid" src="images/G903.jpg" width="1500" height="792" alt="g903-mouse-light-on">
                     </section>
                     <div class="green-text-bckg">
                         <section class="col-md-6">
                             <h2>Quick take:</h2>
-                            <p>Great headphones! If you have the money and a external microphone. Would highly recommend the Audio Technica M50x's. </p>
+                            <p>The Logitech G903 is one of my  favorite mice I have ever owned. It's shape compares to no other. </p>
                         </section>
                     </div>
                 </div>
@@ -95,39 +95,43 @@
                 <div class="row">
                     <section class="col-md-12">
                         <div class="review-text">
-                            <h3><b>The M50x by audio-technica</b></h3>
-                            <p>These headphones are by far the best I’ve used in my life for gaming. I’ve used everything from the high-priced Astro a50s, to the most popular HyperX cloud series. None of those are even in the ballpark of the M50x. It’s safe to say that if I had to pick one headset to have for the rest of my life, I wouldn’t regret picking the M50x’s.</p>
+                            <h3><b>The G903 by Logitech</b></h3>
+                            <p>The Logitech G903 is one of Logitech’s flagship mice in their wireless lineup. The G903 is the upgraded version of the G900. Featuring increased battery time and a better sensor. But at the same time keeping that unique shape. The G903 was my daily driver for the longest time, until I got my hands on the Logitech G Pro wireless. Which I’ll tell you why later when I compare the two. Like always let’s start with the pros and cons.</p>
                         </div>
                     </section>
                     <section class="col-md-12">
                         <div class="review-text">
                             <h3><b>Cons</b></h3>
-                            <p style="clear: both">The M50x’s does have some cons to it, but most of them are personal preference. To start, it’s a closed back design. Closed back, if you don’t know, just means it’s ear cuffs are designed to cancel out noise. Which is not a bad thing by no means. The problem I have with closed back headphones, is that they in general don’t let your ears breath. So, this means over long sessions of wearing them, your ears may begin to sweat and get hot. I’ve only had this issue sometimes when going for long sessions. But to relieve it, I just slide the ear part off my ear about halfway, so I can still hear the audio and let my ear breath for a bit.</p>
+                            <p style="clear: both">The Logitech G903 may be one of my favorite mice of all time. But it doesn’t fall short in a couple areas. First is the weight. The G903 comes in at 110 grams. Comparing it to its competition makes it look like a brick. Next con, would be the battery life. It has around a 24-hour battery life with the LEDs off. Which don’t get me wrong is plenty for most people. Just feel like they could have improved this with one easy solution. Those are really the only two flaws I have with this mouse.</p>
                         </div>
                     </section>
                     <section class="col-md-5">
                         <div class="review-text">
-                            <p>Another con one may have is that, if you intend on using the M50x’s to play games. It doesn’t have a built-in microphone. So, you’ll have to go out and buy one. This wasn’t an issue for me since most gaming headsets have really bad quality microphones. For my microphone I went with a ModMic wireless, which can be attached to any pair of headphones on the market via a 3m adhesive.</p>
+                             <h3><b>Pros</b></h3>
+                            <p>The pros for this mouse are outstanding. My favorite thing about this mouse is the shape. It has a normal mouse shape but then has a cut out right before the mouse buttons. </p>
                             <div class="review-text-seperate">
-                            <h3><b>Pros</b></h3>
-                            <p>The pros for the M50x goes on for days. First off, I’m going to start with what it comes with. It comes with three cables. One is a small short 3.5mm jack for your phones and small devices. The second is just like the first but longer. Then finally, is a coiled cable that is very long. It also has an amp jack on it that can be attached or removed depending if you have a amp or not. One of the unique things about these headphones is that they actually fold up and come with a caring case, this makes transport very easy. </p>
-                            <p>Another pro is that, they use quality leather and cushion in the earpieces and headband. My head never really gets tired of wearing these things, besides when my ears get warm. The biggest pro that these have going for it is the sound quality.
+                           
+                            <p>Giving a person like me with a palm grip more of a fingertip grip without having to change my grip. This makes this mouse feel very on point. Another feature that is very unique to this mouse is the scroll wheel.</p>
+                            <p> It supports tilt buttons, so if you push the scroll wheel to one side or the other it will activate a click. That you can also remap to anything you like. 
                             </p>
+                                <p> The scroll wheel uses Logitech’s Infinite scroll wheel. This technology allows you to toggle between a step mouse wheel, standard mouse, to infinite scroll. This takes away those steps and allows it to scroll as fast as you want. Making it a very seamless and easy scrolling experience.</p>
                                 </div>
                         </div>
                     </section>
                     <section class="col-md-6">
-                        <img class="review-image img-fluid" src="images/M50x-2.jpg" alt="M50x-headphones-box">
+                        <img class="review-image img-fluid" src="images/G903-2.jpg" alt="G903-gaming-mouse">
                     </section>
-                    <section class="col-md-12">
-                    <p> I have never had a pair of headphones sound so good. Lows are really good with these. So, footsteps in games that those are important are very easily heard. These have bass, but not too much where it becomes overpowering. I’ve only had mine for about four months now, and from other reviews, I’ve only heard they sound even better the longer you use them! </p>
-                    </section>
+
                     <section class="col-md-12">
                         <div class="review-text">
-                            <h3><b>Conclusion</b></h3>
-                            <p>Overall if you are looking for a pair of headphones, or a headset. I would go with the Audio Technica M50x’s and a standalone microphone 100 times over again. At $150 its really hard to beat. When I was buying mine it was between the M50x and the Sennheiser HD 6XX. The 6XX come in at $220. The only main differences between the two is that the 6XX are more open back design, which I prefer, and the 6XX draw more power.</p>
+                            <h3><b>G903 vs G Pro Wireless</b></h3>
+                            <p>These two mice are my top two mice of all time. Both have ambidextrous designs. Both have very nice shapes, but different. The G Pro has a very safe shape that will fit most hand sizes and grip types. While the G903 has a very unique shape. I like it, but it does have a large butt on the end of the mouse where your palm sits. Some people don’t like this and can cause some issues with smaller hands.  </p>
+                            <p>The biggest thing that makes the G Pro my daily driver is the weight, sensor, and battery life. The weight is around 80 grams, which is insane that a wireless mouse is under 100 grams. The sensor is the HERO sensor from Logitech. Their pride and joy. It is extremely accurate and most of all, efficient. </p>
+                            <p>By efficient I mean it uses very little power to operate. Thus, making the battery life the best on the market by a landslide. The G Pro has a 48-hour battery without the LEDs on. But I have gotten much more out of it. I actually haven’t charged my mouse in over two weeks and I play daily for several hours. With all that said. If the G903 had the hero sensor in it. I wouldn’t hesitate to get it. I love the G903 that much. It just needs that one thing.</p>
+                            <p>With all that said. If the G903 had the hero sensor in it. I wouldn’t hesitate to get it. I love the G903 that much. It just needs that one thing.</p>
+                            <h3>Conclusion</h3>
                             <div class="review-text-bottem">
-                            <p>I really liked the open back design but didn’t like that it draws more power than the M50x. Another thing that gave the M50x an upper hand was that, they are some much more versatile. The 6XX would just be use able comfortably at home at your main rig. The M50x’s on the other hand are useable anywhere you are. Whether at home, school, or on a bus ride in the city. The M50x will be there. </p>
+                            <p>The G903 is a fantastic mouse. If you don’t mind the weight and the battery life. I would highly recommend this mouse. It is a solid mouse in every sense of the word. </p>
                             </div>
                         </div>
                     </section>
