--- a/razer-huntsman-te-review.html
+++ b/razer-huntsman-te-review.html
@@ -27,8 +27,8 @@
                         </div>
                         <ul class="nav" id="nav">
                             <li><a href="mice.html">Mice</a></li>
-                            <li><a href="keyboards.html">Keyboards</a></li>
-                            <li><a href="headphones.html"><b>Headphones</b></a></li>
+                            <li><a href="keyboards.html"><b>Keyboards</b></a></li>
+                            <li><a href="headphones.html">Headphones</a></li>
                             <li>
                                 <div class="main-nav-small"><a href="about-me.html">About Me</a></div>
                             </li>
