--- a/rival-310-review.html
+++ b/rival-310-review.html
@@ -26,9 +26,9 @@
                             <div id="bar3" class="bar"></div>
                         </div>
                         <ul class="nav" id="nav">
-                            <li><a href="mice.html">Mice</a></li>
+                            <li><a href="mice.html"><b>Mice</b></a></li>
                             <li><a href="keyboards.html">Keyboards</a></li>
-                            <li><a href="headphones.html"><b>Headphones</b></a></li>
+                            <li><a href="headphones.html">Headphones</a></li>
                             <li>
                                 <div class="main-nav-small"><a href="about-me.html">About Me</a></div>
                             </li>
@@ -75,18 +75,18 @@
                     </div>
                     <section class="col-md-9">
                         <div class="page1-header">
-                            <h1>Audio-Technica M50x</h1>
+                            <h1>Steelseries Rival 310</h1>
                         </div>
                     </section>
                 </div>
                 <div class="row">
                     <section class="col-md-12">
-                        <img class="image-header-left img-fluid" src="images/M50x-1.jpg" width="1500" height="792" alt="computer-monitors">
+                        <img class="image-header-left img-fluid" src="images/rival-310-2.jpg" width="1500" height="792" alt="rival-310-gaming-mouse">
                     </section>
                     <div class="green-text-bckg">
                         <section class="col-md-6">
                             <h2>Quick take:</h2>
-                            <p>Great headphones! If you have the money and a external microphone. Would highly recommend the Audio Technica M50x's. </p>
+                            <p>A good affordable mouse. One that is great for people just getting into pc gaming, and also good for long time players.  </p>
                         </section>
                     </div>
                 </div>
@@ -95,43 +95,31 @@
                 <div class="row">
                     <section class="col-md-12">
                         <div class="review-text">
-                            <h3><b>The M50x by audio-technica</b></h3>
-                            <p>These headphones are by far the best I’ve used in my life for gaming. I’ve used everything from the high-priced Astro a50s, to the most popular HyperX cloud series. None of those are even in the ballpark of the M50x. It’s safe to say that if I had to pick one headset to have for the rest of my life, I wouldn’t regret picking the M50x’s.</p>
+                            <h3><b>The Rival 310 by Steelseries</b></h3>
+                            <p>The Steelseries Rival 310 is one of the three flagship mice Steelseries has to offer. It has a right-handed ergonomic grip with larger body size than most mice. The Rival 310 has the best sensor Steelseries has every made. The TrueMove sensor is clamed by Steelseries the be the most precise sensor every created. Even if its sensor is the best. Would that make this mouse right for you? I hope to answer that question.</p>
+                        </div>
+                    </section>
+                        <section class="col-md-12">
+                        <div class="review-text">
+                            <p>The Rival 300 was my first gaming mouse I owned. I don’t know what about the mouse called out to me, but in 2016 when I found it I instantly fell in love with it. The shape, materials, size, and weight where all perfect for me at the time. So I used that mouse for a very long time. I never even thought about getting a new one. Until finally it started to have a couple issues with the scroll wheel and the size buttons. Around the time these issues started to become more frequent Steelseries where about to release there 310 line of mice. With the Rival and Sensei. So naturally I was very attracted to the new rival. Best sensor every created with better switches and same design, heck yeah, right. Sadly, I was wrong. </p>
                         </div>
                     </section>
                     <section class="col-md-12">
                         <div class="review-text">
                             <h3><b>Cons</b></h3>
-                            <p style="clear: both">The M50x’s does have some cons to it, but most of them are personal preference. To start, it’s a closed back design. Closed back, if you don’t know, just means it’s ear cuffs are designed to cancel out noise. Which is not a bad thing by no means. The problem I have with closed back headphones, is that they in general don’t let your ears breath. So, this means over long sessions of wearing them, your ears may begin to sweat and get hot. I’ve only had this issue sometimes when going for long sessions. But to relieve it, I just slide the ear part off my ear about halfway, so I can still hear the audio and let my ear breath for a bit.</p>
+                            <p style="clear: both">The cons with this mouse for me outweigh the pros. To start my biggest con for this mouse was the build materials they used. With the rival 310 they went with a rubber grip on the sides of the mouse for more grip over the original 300. These quickly started to lose their grip and even started to peel off the side of the mouse within months of getting it. The cable they used was also very poor material. It was stiff and kinked easily. For some reason I never could get that feeling I had with the rival 300 back with the rival 310. </p>
                         </div>
                     </section>
                     <section class="col-md-5">
                         <div class="review-text">
-                            <p>Another con one may have is that, if you intend on using the M50x’s to play games. It doesn’t have a built-in microphone. So, you’ll have to go out and buy one. This wasn’t an issue for me since most gaming headsets have really bad quality microphones. For my microphone I went with a ModMic wireless, which can be attached to any pair of headphones on the market via a 3m adhesive.</p>
-                            <div class="review-text-seperate">
                             <h3><b>Pros</b></h3>
-                            <p>The pros for the M50x goes on for days. First off, I’m going to start with what it comes with. It comes with three cables. One is a small short 3.5mm jack for your phones and small devices. The second is just like the first but longer. Then finally, is a coiled cable that is very long. It also has an amp jack on it that can be attached or removed depending if you have a amp or not. One of the unique things about these headphones is that they actually fold up and come with a caring case, this makes transport very easy. </p>
-                            <p>Another pro is that, they use quality leather and cushion in the earpieces and headband. My head never really gets tired of wearing these things, besides when my ears get warm. The biggest pro that these have going for it is the sound quality.
-                            </p>
-                                </div>
+                            <p>This mouse does have its pros. The pro is that it’s a very good sensor. With that said, every top mouse now a days, has a fantastic sensor and you wouldn’t be able to tell the difference for the most part. Its buttons are good and clicky. Seem like they where for sure a good upgrade from the original.  The biggest pro this mouse has is the price. Right now, you can get this mouse for $50. Which if you are on a budget, I think that helps make this mouse a top choice. </p>
                         </div>
                     </section>
                     <section class="col-md-6">
-                        <img class="review-image img-fluid" src="images/M50x-2.jpg" alt="M50x-headphones-box">
+                        <img class="review-image img-fluid" src="images/rival-310-1.jpg" alt="M50x-headphones-box">
                     </section>
-                    <section class="col-md-12">
-                    <p> I have never had a pair of headphones sound so good. Lows are really good with these. So, footsteps in games that those are important are very easily heard. These have bass, but not too much where it becomes overpowering. I’ve only had mine for about four months now, and from other reviews, I’ve only heard they sound even better the longer you use them! </p>
-                    </section>
-                    <section class="col-md-12">
-                        <div class="review-text">
-                            <h3><b>Conclusion</b></h3>
-                            <p>Overall if you are looking for a pair of headphones, or a headset. I would go with the Audio Technica M50x’s and a standalone microphone 100 times over again. At $150 its really hard to beat. When I was buying mine it was between the M50x and the Sennheiser HD 6XX. The 6XX come in at $220. The only main differences between the two is that the 6XX are more open back design, which I prefer, and the 6XX draw more power.</p>
-                            <div class="review-text-bottem">
-                            <p>I really liked the open back design but didn’t like that it draws more power than the M50x. Another thing that gave the M50x an upper hand was that, they are some much more versatile. The 6XX would just be use able comfortably at home at your main rig. The M50x’s on the other hand are useable anywhere you are. Whether at home, school, or on a bus ride in the city. The M50x will be there. </p>
-                            </div>
-                        </div>
-                    </section>
-                </div>
+
             </div>
         </div>
     </div>
