--- a/zowie-ec2-a-review.html
+++ b/zowie-ec2-a-review.html
@@ -26,9 +26,9 @@
                             <div id="bar3" class="bar"></div>
                         </div>
                         <ul class="nav" id="nav">
-                            <li><a href="mice.html">Mice</a></li>
+                            <li><a href="mice.html"><b>Mice</b></a></li>
                             <li><a href="keyboards.html">Keyboards</a></li>
-                            <li><a href="headphones.html"><b>Headphones</b></a></li>
+                            <li><a href="headphones.html">Headphones</a></li>
                             <li>
                                 <div class="main-nav-small"><a href="about-me.html">About Me</a></div>
                             </li>
@@ -75,18 +75,18 @@
                     </div>
                     <section class="col-md-9">
                         <div class="page1-header">
-                            <h1>Audio-Technica M50x</h1>
+                            <h1>Zowie EC2-A</h1>
                         </div>
                     </section>
                 </div>
                 <div class="row">
                     <section class="col-md-12">
-                        <img class="image-header-left img-fluid" src="images/M50x-1.jpg" width="1500" height="792" alt="computer-monitors">
+                        <img class="image-header-left img-fluid" src="images/zowie-ec2-a-1.jpg" width="1500" height="792" alt="zowie-mouse-on-pad">
                     </section>
                     <div class="green-text-bckg">
                         <section class="col-md-6">
                             <h2>Quick take:</h2>
-                            <p>Great headphones! If you have the money and a external microphone. Would highly recommend the Audio Technica M50x's. </p>
+                            <p>Zowie is known for making competitive focused gear. If you want to compete with the best while at the same time not breaking the bank. Zowie should be number 1. </p>
                         </section>
                     </div>
                 </div>
@@ -95,39 +95,41 @@
                 <div class="row">
                     <section class="col-md-12">
                         <div class="review-text">
-                            <h3><b>The M50x by audio-technica</b></h3>
-                            <p>These headphones are by far the best I’ve used in my life for gaming. I’ve used everything from the high-priced Astro a50s, to the most popular HyperX cloud series. None of those are even in the ballpark of the M50x. It’s safe to say that if I had to pick one headset to have for the rest of my life, I wouldn’t regret picking the M50x’s.</p>
+                            <h3><b>The EC2-A by Zowie</b></h3>
+                            <p>Zowie has always been and staple in esports ever since they where created. All their products where designed for top competitive play. Their mouse line up is no exceptions. When you first take a look at the Zowie EC2-A. It looks very basic. Nothing flashy just a mouse. That’s what Zowie is known for. </p>
                         </div>
                     </section>
                     <section class="col-md-12">
                         <div class="review-text">
-                            <h3><b>Cons</b></h3>
-                            <p style="clear: both">The M50x’s does have some cons to it, but most of them are personal preference. To start, it’s a closed back design. Closed back, if you don’t know, just means it’s ear cuffs are designed to cancel out noise. Which is not a bad thing by no means. The problem I have with closed back headphones, is that they in general don’t let your ears breath. So, this means over long sessions of wearing them, your ears may begin to sweat and get hot. I’ve only had this issue sometimes when going for long sessions. But to relieve it, I just slide the ear part off my ear about halfway, so I can still hear the audio and let my ear breath for a bit.</p>
+             
+                            <p style="clear: both">They cut out the non-necessities and focus on the shape and feel of the mouse in your hand. For instance, the mouse has no programable buttons. You control the DPI with a switch on the mouse. So, you don’t have to worry about having the right software installed to change those settings. The Zowie EC2-A is a very popular mouse amongst CSGO players. It has a right-handed ergonomic grip. It also has a broth the EC2-B which is just a bit larger.</p>
                         </div>
                     </section>
                     <section class="col-md-5">
                         <div class="review-text">
-                            <p>Another con one may have is that, if you intend on using the M50x’s to play games. It doesn’t have a built-in microphone. So, you’ll have to go out and buy one. This wasn’t an issue for me since most gaming headsets have really bad quality microphones. For my microphone I went with a ModMic wireless, which can be attached to any pair of headphones on the market via a 3m adhesive.</p>
+                                           <h3><b>Cons</b></h3>
+                            <p>There’s not a lot of bad things to be said about this mouse. Let’s start with the cable. Zowie has never changed their cables ever since they started making them. Which would be fine because it’s a good cable don’t get me wrong. </p>
                             <div class="review-text-seperate">
-                            <h3><b>Pros</b></h3>
-                            <p>The pros for the M50x goes on for days. First off, I’m going to start with what it comes with. It comes with three cables. One is a small short 3.5mm jack for your phones and small devices. The second is just like the first but longer. Then finally, is a coiled cable that is very long. It also has an amp jack on it that can be attached or removed depending if you have a amp or not. One of the unique things about these headphones is that they actually fold up and come with a caring case, this makes transport very easy. </p>
-                            <p>Another pro is that, they use quality leather and cushion in the earpieces and headband. My head never really gets tired of wearing these things, besides when my ears get warm. The biggest pro that these have going for it is the sound quality.
+                            <p>The problem is the revaluation of paracord and “phantom” cables. These cables are made of fabric instead of rubber. So, they are much more flexible, won’t hold as much memory, glide easier, and are much lighter. This would be a very simple change out of the box to do yourself. </p>
+                            <p>The bad side of doing it yourself is that it would void any warranty you have, and risk breaking something. Another issue I found with the mouse is the side buttons. They are known for being very flimsy and just overall feel very cheap. 
                             </p>
+                                <P>If I had to guess where they had to cut some cost somewhere. I would start with the side buttons. When you press them, they feel very spongy until you finally get the click after you press it all the way down.</P>
+                                <h3><b>Pros</b></h3>
+                                <p>The Zowie EC2-A has a lot going for it. Let’s start with its shape.</p>
                                 </div>
                         </div>
                     </section>
                     <section class="col-md-6">
-                        <img class="review-image img-fluid" src="images/M50x-2.jpg" alt="M50x-headphones-box">
+                        <img class="review-image img-fluid" src="images/zowie-ec2-a-2.jpg" alt="zowie-mouse">
                     </section>
-                    <section class="col-md-12">
-                    <p> I have never had a pair of headphones sound so good. Lows are really good with these. So, footsteps in games that those are important are very easily heard. These have bass, but not too much where it becomes overpowering. I’ve only had mine for about four months now, and from other reviews, I’ve only heard they sound even better the longer you use them! </p>
-                    </section>
+
                     <section class="col-md-12">
                         <div class="review-text">
-                            <h3><b>Conclusion</b></h3>
-                            <p>Overall if you are looking for a pair of headphones, or a headset. I would go with the Audio Technica M50x’s and a standalone microphone 100 times over again. At $150 its really hard to beat. When I was buying mine it was between the M50x and the Sennheiser HD 6XX. The 6XX come in at $220. The only main differences between the two is that the 6XX are more open back design, which I prefer, and the 6XX draw more power.</p>
+                            
+                            <p> Its body is all plastic, no rubber grips or anything like that. It has a glossy finish, so you’ll get very good grip. Then the right-handed grip fits all grip styles. I personally use a palm grip. Next pro is the sensor. It’s a top optical sensor. You won’t have any aim jump or slamming with the mouse at all. Along with a great sensor. The Zowie EC2-A has great M1 and M2 buttons. They have a satisfying click to them and feel very sturdy. </p>
                             <div class="review-text-bottem">
-                            <p>I really liked the open back design but didn’t like that it draws more power than the M50x. Another thing that gave the M50x an upper hand was that, they are some much more versatile. The 6XX would just be use able comfortably at home at your main rig. The M50x’s on the other hand are useable anywhere you are. Whether at home, school, or on a bus ride in the city. The M50x will be there. </p>
+                                <h3><b>Conclusion</b></h3>
+                            <p>Overall the Zowie EC2-A is a great mouse for right-handed users. Coming in at $60, it is a very affordable mouse for high level gameplay. If you are looking for a competitive mouse that is built for competitive, I would go straight to Zowie. If you would prefer a different shape or size. I would recommend going to Zowie’s website and checking out the rest of their gaming mouse to find the right one for you. </p>
                             </div>
                         </div>
                     </section>
